# apriltags3-py

./: .gitignore  CHANGES.rst  CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
.travis/: pypi_deploy.sh
docs/: conf.py
scripts/: repair-wheels-windows.py  repair-wheels-windows.sh
src/pupil_apriltags/: CMakeLists.txt  __init__.py  bindings.py
tests/: test_api.py
