[build-system]
requires = [
    "setuptools>=56",
    "setuptools_scm[toml]>=3.4.1",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja;platform_system != \"Windows\"",
    "pupil-pthreads-win;platform_system == \"Windows\""
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.setuptools_scm]

[tool.pytest-enabler.mypy]
addopts = "--mypy"

[tool.pytest-enabler.cov]
addopts = "--cov"
