[build-system]
requires = [
    "setuptools>=56",
    "setuptools_scm[toml]>=3.4.1",
    "wheel",
    "scikit-build",
    "Cython",
    "cmake",
    "ninja;platform_system != \"Windows\"",
    "pupil-pthreads-win;platform_system == \"Windows\"",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = false

[tool.setuptools_scm]

[tool.pytest-enabler.mypy]
addopts = "--mypy"

[tool.pytest-enabler.cov]
addopts = "--cov"

[tool.cibuildwheel]
archs = ["native"]
skip = "{cp,pp}27-* {cp,pp}35-* pp*"

build-frontend = "build"

test-command = "pytest {package}/tests -v"
before-test = ""
test-requires = ["pytest"]
test-extras = []

manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel pupil-pthreads-win"
repair-wheel-command = [
    "python scripts/repair-wheels-windows.py {wheel} {dest_dir}",
    "choco install dependencies -y",
    "cd {dest_dir} && 7z.exe x *.whl",
    "Dependencies.exe -chain -depth 1 {dest_dir}/pupil_apriltags/lib/apriltag.dll",
    "Dependencies.exe -chain -depth 1 {dest_dir}/pupil_apriltags.libs/pthreadvc2.dll",
]
environment = { PATH='C:\\Program Files\\7-Zip\\;$PATH' }
