[metadata]
name = pupil_apriltags
description = Python bindings for apriltags v3
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pupil-labs/apriltags
author = Pupil Labs GmbH
author_email = info@pupil-labs.com
license = MIT
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
install_requires =
    numpy
    importlib-metadata;python_version<"3.8"
    pupil-pthreads-win;platform_system == "Windows"
python_requires = >=3.7
include_package_data = true
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*

[options.extras_require]
docs =
    furo
    jaraco.packaging>=8.2
    rst.linker>=1.9
    sphinx<4.4  # 4.4 does not detect TypeVars correctly
testing =
    pytest>=6
    pytest-checkdocs>=2.4
    pytest-cov
    pytest-enabler>=1.0.1
    pytest-mypy
